--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 8080",
-    "build": "next build --turbopack",
+    "dev": "next dev -p 3000",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -12,22 +12,25 @@
     "@ai-sdk/anthropic": "^2.0.17",
     "@ai-sdk/openai": "^2.0.32",
     "@ai-sdk/xai": "^2.0.20",
-    "@tamagui/config": "^1.132.24",
-    "@tamagui/core": "^1.132.24",
+    "@tamagui/config": "^1.132.25",
+    "@tamagui/core": "^1.132.25",
     "@tamagui/lucide-icons": "^1.132.25",
-    "@tamagui/web": "^1.132.24",
+    "@tamagui/web": "^1.132.25",
     "@upstash/redis": "^1.35.3",
     "ai": "^5.0.45",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native-svg": "^15.13.0",
+    "react-native-svg-web": "^1.0.9",
     "react-native-web": "^0.21.1",
-    "tamagui": "^1.132.24",
+    "tamagui": "^1.132.25",
     "zod": "^4.1.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tamagui/next-plugin": "^1.134.0",
+    "@tamagui/vite-plugin": "^1.134.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
